RSA auth and refactor
